# reedkiln

./: .gitignore  CMakeLists.txt  README.md  log.h  reedkiln.c  reedkiln.h  shortest.c  shortest.h
.github/workflows/: cmake-multi-platform.yml
tests/: CMakeLists.txt  test_assert.c  test_bail.c  test_c.c  test_cxx.cpp  test_expect.cpp  test_raii_bail.cpp  test_reset.cpp
